syntax = "proto3";

option csharp_namespace = "BeerStuff.Orchestrator.Shared";

package shared;

message Decimal {
	// Whole units part of the amount
	int64 units = 1;

	// Nano units of the amount (10^-9)
	// Must be same sign as units
	sfixed32 nanos = 2;
}

message ResponseResult {
	bool successful = 1;
	string message = 2;
}